add the customwasm module to provide parameters for calculating the gas cost of storing and instantiating smart contracts
